--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 inventory=hosts.ini
 remote_user=anto
-private_key_file=/home/$USER/.ssh/id_rsa
+private_key_file=~/.ssh/id_rsa
 
 [privilege_escalation]
 become=True
