--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,6 +2,7 @@
 inventory=hosts.ini
 remote_user=ansible
 private_key_file=~/.ssh/id_rsa
+host_key_checking=False
 
 [privilege_escalation]
 become=True
