--- a/playbook-init.yaml
+++ b/playbook-init.yaml
@@ -3,12 +3,13 @@
   hosts: localhost
   tasks:
     - name: Generate SSH Key
-      community.general.openssh_keypair:
+      community.crypto.openssh_keypair:
         path: "{{ ansible_ssh_private_key_file }}"
-        type: rsa
+        type: ed25519
         size: 2048
         state: present
-        
+        force: false
+
 - name: Initial Playbook
   hosts: all
   roles:
