--- a/playbook-init.yaml
+++ b/playbook-init.yaml
@@ -4,12 +4,13 @@
   tasks:
     - name: Generate SSH Key
       community.crypto.openssh_keypair:
-        path: "{{ ansible_ssh_private_key_file }}"
+        path: "/home/{{ansible_user}}/.ssh/id_ed25519"
         type: ed25519
         size: 2048
         state: present
         force: false
-
+        owner: "{{ ansible_user }}"
+        group: "{{ ansible_user }}"
 - name: Initial Playbook
   hosts: all
   roles:
