--- a/roles/init/tasks/main.yaml
+++ b/roles/init/tasks/main.yaml
@@ -3,7 +3,7 @@
   authorized_key:
     user: ansible
     state: present
-    key: "{{ lookup('file', '/home/ansible/.ssh/id_ed25519.pub') }}"
+    key: "{{ lookup('file', '/home/' + ansible_user + '/.ssh/id_ed25519.pub') }}"
 
 - name: Mise à jour du serveur DNS
   ansible.builtin.lineinfile:
