--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 inventory=hosts.ini
 remote_user=ansible
-private_key_file=~/.ssh/id_rsa
+# private_key_file=~/.ssh/id_rsa
 host_key_checking=False
 
 [privilege_escalation]
