--- a/playbook-peertube.yaml
+++ b/playbook-peertube.yaml
@@ -1,13 +1,6 @@
 ---
+
 - name: Create a new user
   hosts: peertube
-  tasks:
-    - name: Create a new user
-      ansible.builtin.user:
-        name: "{{ username }}"
-        group: "{{ username }}"
-        password: "{{ password }}"
-        state: present
-        shell: /bin/bash
-        createhome: true
-        home: "{{ peertube_path }}"
+  roles:
+    - peertube
