--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,6 +3,7 @@ inventory=hosts.ini
 remote_user=ansible
 private_key_file=~/.ssh/id_ed25519
 host_key_checking=False
+allow_world_readable_tmpfiles=true
 
 [privilege_escalation]
 become=True
