fix syntax and indent in init

--- a/playbook-init.yaml
+++ b/playbook-init.yaml
@@ -4,7 +4,7 @@
   tasks:
     - name: Generate SSH Key
       community.crypto.openssh_keypair:
-        path: "/home/{{ansible_user}}/.ssh/id_ed25519"
+        path: "/home/{{ ansible_user }}/.ssh/id_ed25519"
         type: ed25519
         size: 2048
         state: present
@@ -13,17 +13,15 @@
         group: "{{ ansible_user }}"
 
     - name: Retrieve latest Peertube version from GitHub API
-      uri:
+      ansible.builtin.uri:
         url: https://api.github.com/repos/chocobozzz/peertube/releases/latest
-        return_content: yes
+        return_content: true
       register: latest_version_raw
 
     - name: Parse latest Peertube version
-      set_fact:
+      ansible.builtin.set_fact:
         latest_version: "{{ latest_version_raw.json.tag_name }}"
       when: latest_version_raw.status == 200
-
-
 
 - name: Initial Playbook
   hosts: all
