--- a/roles/init/tasks/main.yaml
+++ b/roles/init/tasks/main.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Déployer la clé publique
-  authorized_key:
+  ansible.posix.authorized_key:
     user: ansible
     state: present
     key: "{{ lookup('file', '/home/' + ansible_user + '/.ssh/id_ed25519.pub') }}"
@@ -21,17 +21,15 @@
     name: "{{ inventory_hostname }}"
 
 - name: Mettre à jour le système pour Debian ou Ubuntu
-  when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
   ansible.builtin.apt:
     update_cache: true
     name: "*"
     state: latest
+  when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
 
 - name: Mettre à jour le système pour CentOS
-  when: ansible_distribution == 'CentOS'
   ansible.builtin.yum:
     update_cache: true
     name: "*"
     state: latest
-
-
+  when: ansible_distribution == 'CentOS'
