--- a/playbook-peertube.yaml
+++ b/playbook-peertube.yaml
@@ -6,7 +6,7 @@
     - user
     - database
     - prepare_directories
-    # - peertube config
+    - peertube_config
     # - webserver
-    # - linux_tcp_tuning
-    # - systemd
+    - linux_tcp_tuning
+    - systemd
