--- a/roles/peertube_config/tasks/main.yaml
+++ b/roles/peertube_config/tasks/main.yaml
@@ -11,15 +11,8 @@
 # TODO: import ownn file
 - name: Copy production.yaml.example to production.yaml as the peertube user
   ansible.builtin.copy:
-    src: "/var/www/peertube/peertube-latest/config/production.yaml.example"
+    src: "files/config.yaml"
     dest: "/var/www/peertube/config/production.yaml"
-    remote_src: true
     owner: peertube
     group: peertube
     mode: '0644'
-
-- name: Replace value in the production.yaml file
-  ansible.builtin.replace:
-    path: "/var/www/peertube/config/production.yaml"
-    regexp: 'secret: ".*"'
-    replace: 'secret: "{{ peertube_secret }}"'
