--- a/playbook-init.yaml
+++ b/playbook-init.yaml
@@ -2,6 +2,13 @@
 - name: Control Node
   hosts: localhost
   tasks:
+    - name: Create .ssh folder
+      ansible.builtin.file:
+        path: "/home/{{ ansible_user }}/.ssh"
+        state: directory
+        owner: "{{ ansible_user }}"
+        group: "{{ ansible_user }}"
+        mode: "0700"
     - name: Generate SSH Key
       community.crypto.openssh_keypair:
         path: "/home/{{ ansible_user }}/.ssh/id_ed25519"
