--- a/playbook-init.yaml
+++ b/playbook-init.yaml
@@ -1,35 +1,9 @@
 ---
 - name: Control Node
   hosts: localhost
-  tasks:
-    - name: Create .ssh folder
-      ansible.builtin.file:
-        path: "/home/{{ ansible_user }}/.ssh"
-        state: directory
-        owner: "{{ ansible_user }}"
-        group: "{{ ansible_user }}"
-        mode: "0700"
-    - name: Generate SSH Key
-      community.crypto.openssh_keypair:
-        path: "/home/{{ ansible_user }}/.ssh/id_ed25519"
-        type: ed25519
-        size: 2048
-        state: present
-        force: false
-        owner: "{{ ansible_user }}"
-        group: "{{ ansible_user }}"
-
-    - name: Retrieve latest Peertube version from GitHub API
-      ansible.builtin.uri:
-        url: https://api.github.com/repos/chocobozzz/peertube/releases/latest
-        return_content: true
-      register: latest_version_raw
-
-    - name: Parse latest Peertube version
-      ansible.builtin.set_fact:
-        latest_version: "{{ latest_version_raw.json.tag_name }}"
-      when: latest_version_raw.status == 200
-
+  roles:
+    - localhost
+    
 - name: Initial Playbook
   hosts: all
   roles:
