--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,6 +4,8 @@ remote_user=ansible
 private_key_file=~/.ssh/id_ed25519
 host_key_checking=False
 allow_world_readable_tmpfiles=true
+remote_tmp = /tmp/.ansible-${USER}/tmp
+local_tmp = /tmp/.ansible-${USER}/tmp
 
 [privilege_escalation]
 become=True
