--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory=hosts.ini.local
+inventory=hosts.ini
 remote_user=ansible
 private_key_file=~/.ssh/id_ed25519
 host_key_checking=False
